# src/modules/accounts/useCases/AuthenticateUser/AuthenticateUserController.ts
@@ -1,0 +1,18 @@
+import { Request, Response } from 'express';
+import { container } from 'tsyringe';
+
+import { AuthenticateUserUseCase } from './AuthenticateUserUseCase';
+
+class AuthenticateUserController {
+  async handle(req: Request, res: Response): Promise<Response> {
+    const { email, password } = req.body;
+
+    const authenticateUserUseCase = container.resolve(AuthenticateUserUseCase);
+
+    const authInfo = await authenticateUserUseCase.execute({ email, password });
+
+    return res.json(authInfo);
+  }
+}
+
+export { AuthenticateUserController };
