# src/modules/accounts/useCases/CreateUser/CreateUserController.ts
@@ -1,0 +1,23 @@
+import { Request, Response } from 'express';
+import { container } from 'tsyringe';
+
+import { CreateUserUseCase } from './CreateUserUseCase';
+
+class CreateUserController {
+  async handle(req: Request, res: Response): Promise<Response> {
+    const { name, email, driver_license, password } = req.body;
+
+    const createUserUseCase = container.resolve(CreateUserUseCase);
+
+    await createUserUseCase.execute({
+      name,
+      email,
+      driver_license,
+      password,
+    });
+
+    return res.status(201).send();
+  }
+}
+
+export { CreateUserController };
